[package]
name = "rust-rsa-wasm-npm"
version = "0.2.0"
authors = ["wk3368<wk3368@163.com>"]
description = "An npm package using rust-rsa for encrypt/decrypt any string with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/wk3368/rust-rsa-wasm-npm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rsa = "0.8.2"
hex = "0.3"